feat: add new metrics

--- a/models/marts/fct_salesorder.yml
+++ b/models/marts/fct_salesorder.yml
@@ -17,6 +17,18 @@ models:
       - name: fk_product
         description: Foreign key linking to the product table. Identifies the product in this detail record.
 
+      - name: extended_amount
+        description: Total value for the item line, calculated as (order_quantity * unit_price) - (order_quantity * unit_price_discount).
+
+      - name: net_amount
+        description: Final value for the item line, including taxes and freight (extended_amount + tax_amount + freight).
+
+      - name: total_discount
+        description: Total discount applied to the item line, calculated as (order_quantity * unit_price_discount).
+
+      - name: has_discount
+        description: Boolean indicating if the item line has a discount (true if unit_price_discount > 0, else false).
+
       - name: order_quantity
         description: Quantity of the product ordered in this detail record.
 
